WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129529
JSObject::findPropertyHashEntry() should take VM instead of ExecState.
https://bugs.webkit.org/show_bug.cgi?id=129529
Summary
JSObject::findPropertyHashEntry() should take VM instead of ExecState.
Andreas Kling
Reported
2014-02-28 19:08:28 PST
JSObject::findPropertyHashEntry() should take VM instead of ExecState.
Attachments
Patch
(3.59 KB, patch)
2014-02-28 19:09 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-02-28 19:09:46 PST
Created
attachment 225520
[details]
Patch
Geoffrey Garen
Comment 2
2014-02-28 19:10:19 PST
Comment on
attachment 225520
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-02-28 19:55:32 PST
Comment on
attachment 225520
[details]
Patch Clearing flags on attachment: 225520 Committed
r164904
: <
http://trac.webkit.org/changeset/164904
>
WebKit Commit Bot
Comment 4
2014-02-28 19:55:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug