JSObject::findPropertyHashEntry() should take VM instead of ExecState. <https://webkit.org/b/129529>

Callers already have VM in a local, and findPropertyHashEntry() only
uses the VM, no need to go all the way through ExecState.

Reviewed by Geoffrey Garen.

* runtime/JSObject.cpp:
(JSC::JSObject::put):
(JSC::JSObject::deleteProperty):
(JSC::JSObject::findPropertyHashEntry):
* runtime/JSObject.h:


Canonical link: https://commits.webkit.org/147584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164904 268f45cc-cd09-0410-ab3c-d52691b4dbfc